Fixed a bunch of issues and added Ctrl + Shift + E shortcut key.

--- a/client/explorer/section/details/details.css
+++ b/client/explorer/section/details/details.css
@@ -1,14 +1,6 @@
-.vm_explorer_details_control {
-    width: 20px;
-    display: inline-block;
-}
 
 .vm_explorer_details_check {
-    margin-left: 5px !important;
-}
-
-.vm_explorer_details_value {
-    display: inline-block;
+    min-width: 20px;
 }
 
 .vm_explorer_details_label {
